# Flow

./: .gitignore  LICENSE  README.md  RELEASE_NOTES.md  package-lock.json  package.json  privacy-policy.md
.github/workflows/: release.yml
src/: about.html  about.js  index.html  input.html  input.js  main.js  remote-config.js  remote-inbox.html  remote-inbox.js  remote-sender.html  remote-sender.js  settings.html  settings.js  shared.js  styles.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
